k8s-deployment/login_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-app
  template:
    metadata:
      labels:
        app: login-app
    spec:
      containers:
      - name: login-app
        image: srijaldocker/node-app:login
        ports:
        - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  selector:
    app: login-app
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
  type: LoadBalancer
