k8s-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: srijal.nextstep.com.np
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: login-service 
            port: 
              number: 4001
